--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">GeoLesson</string>
+    <string name="app_name">GeoLocationMap</string>
     <string name="title_activity_maps">MapLesson</string>
 </resources>
